[project]
name = "reserveme-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "databases~=0.5",
    "fastapi[all]~=0.99",
    "gunicorn>=23.0.0",
    "passlib[bcrypt]~=1.7",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "pyjwt~=2.8",
    "python-dotenv~=1.0",
    "requests>=2.32.5",
    "sqlalchemy~=2.0",
    "uvicorn[standard]~=0.23",
]
