[project]
name = "reserveme-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler",
    "fastapi[all]==0.109.1",
    "gunicorn>=23.0.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.2.1",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "sqlalchemy>=2.0.34",
    "uvicorn[standard]==0.27.1",
    "bcrypt==3.2.2",
]
